--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,14 @@ body {
     font-family: 'Rubik', sans-serif;
     font-size: 14px;
     font-weight: 400;
-    background: #eff6fa;
+    background: #f2f5da;
     color: #000000;
+}
+
+.icon-bee{
+    width: 40px;
+    margin-bottom: 20px;
+    margin-right: 10px;
 }
 
 .navbar-dark{
@@ -11,13 +17,18 @@ body {
 }
 
 .navbar-brand > span{
-    color: rgba(0, 0, 0, 0.822);
-    text-shadow: 0px 0px 11px white;
-
+    font-weight: 700;
+    font-size: xxx-large;
 }
 
-.navbar-brand > span:first-child {
-    color: #ebe711;
+.navbar-brand > span:nth-child(2) {
+    color: #ffd207;
+    font-weight: 700;
+}
+
+.navbar-brand > span:nth-child(3){
+    -webkit-text-stroke: 0.4px #ffd207;
+    color: black;
 }
 
 @media (min-width: 992px) {
@@ -64,14 +75,14 @@ body {
 }
 
 .btn-outline-success:hover {
-    background-color: #ffeb38;
-    border-color: #ffeb38;
+    background-color: #ffd207;
+    border-color: #ffd207;
     color: black;
 }
 
 .btn-outline-success {
-    color: #ffeb38;
-    border-color: #ffeb38;
+    color: #ffd207;
+    border-color: #ffd207;
 }
 
 .banner {
@@ -299,6 +310,10 @@ button.blu:hover {
     }
 }
 
+.bbb_viewed{
+    background: #f2f5da !important;
+}
+
 .bbb_viewed_nav > img {
     width: 15px;
     margin: auto 15px;
@@ -320,7 +335,7 @@ button.blu:hover {
 
 .link-footer {
     background: transparent;
-    color: white;
+    color: black;
 }
 
 .modal-menu > p > span {
