--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,6 @@ body {
     font-family: 'Rubik', sans-serif;
     font-size: 14px;
     font-weight: 400;
-    background: #f2f5da;
     color: #000000;
 }
 
@@ -227,12 +226,12 @@ button.popup {
 }
 
 .modal-menu.giallo {
-    background: #e69d00;
+    background: #FFD207;
 }
 
 
 button.giallo {
-    color: #e69d00;
+    color: #ffc317;
     border-color: #e69d00;
 }
 
@@ -333,22 +332,18 @@ button.blu:hover {
     }
 }
 
-.bbb_viewed{
-    background: #f2f5da !important;
-}
-
 .bbb_viewed_nav > img {
     width: 15px;
     margin: auto 15px;
 }
 
-.footer-color {
-    background: #d4a001;
+.blue {
+    background: #f7f7f7;
     color: black;
 }
 
 .footer-copyright {
-    background: #FEC724;
+    background: #FFD207;
 }
 
 .link-footer:hover {
@@ -386,4 +381,21 @@ ul.navbar-nav :nth-child(3){
 
 .navbar-collapse{
     margin: 5px auto;
+}
+
+
+.drop-shadow{
+    box-shadow: 0px 1px 5px #888888;
+    z-index:999;
+}
+
+
+.white-inputs{
+    color:white;
+    background: black;
+}
+
+.white-inputs:focus{
+    color:white;
+    background: black;
 }
