--- a/css/style.css
+++ b/css/style.css
@@ -5,18 +5,18 @@ body {
     color: #000000;
 }
 
-.icon-bee{
+.icon-bee {
     width: 40px;
     margin-bottom: 0;
     margin-right: 10px;
 
 }
 
-.navbar-dark{
+.navbar-dark {
     background: #000000 !important;
 }
 
-.navbar-brand > span{
+.navbar-brand > span {
     font-weight: 700;
     font-size: xx-large;
 
@@ -27,7 +27,7 @@ body {
     font-weight: 700;
 }
 
-.navbar-brand > span:nth-child(3){
+.navbar-brand > span:nth-child(3) {
     -webkit-text-stroke: 0.04ch #ffd207;
     color: black;
 }
@@ -61,13 +61,14 @@ body {
     a.nav-link > .nav-link {
         padding: 0;
     }
-    .icon-bee{
+
+    .icon-bee {
         float: right;
     }
 }
 
-@media (max-width: 1055px){
-    .form-inline> label:nth-child(2){
+@media (min-width: 992px) and (max-width: 1055px) {
+    .form-inline > label:nth-child(2) {
         display: none;
     }
 }
@@ -82,6 +83,7 @@ body {
 
 .form-control {
     margin-right: 8px;
+    width: auto;
 }
 
 .btn-outline-success:hover {
@@ -92,10 +94,9 @@ body {
 
 .btn-outline-success:active {
     background-color: #dbdad4 !important;
-    border-color: #dbdad4 !important; 
+    border-color: #dbdad4 !important;
     color: black !important;
 }
-
 
 
 .btn-outline-success {
@@ -161,12 +162,12 @@ body {
 }
 
 .modal-menu > .btn:focus {
-    box-shadow: none !important;    
+    box-shadow: none !important;
 }
 
 .modal-menu > .btn:active {
     background: transparent !important;
-    border-color: #000000 !important;    
+    border-color: #000000 !important;
 }
 
 @media (max-width: 1250px) {
@@ -360,42 +361,55 @@ button.blu:hover {
     user-select: none;
 }
 
-.footer-content{
+.footer-content {
     padding-left: 5%;
 }
 
-.footer-left{
+.footer-left {
     padding-left: 0;
 }
 
 @media (max-width: 460px) {
-    .bbb_viewed_title > span{
+    .bbb_viewed_title > span {
         display: block;
     }
 }
 
 ul.navbar-nav :nth-child(2),
-ul.navbar-nav :nth-child(3){
+ul.navbar-nav :nth-child(3) {
     padding-top: 3px;
 }
 
-.navbar-collapse{
+.navbar-collapse {
     margin: 5px auto;
 }
 
 
-.drop-shadow{
-    box-shadow: 0px 1px 5px #888888;
-    z-index:999;
+.drop-shadow {
+    box-shadow: 0 1px 5px #888888;
+    z-index: 999;
 }
 
 
-.white-inputs{
-    color:white;
+.white-inputs {
+    color: white;
     background: black;
 }
 
-.white-inputs:focus{
-    color:white;
+.white-inputs:focus {
+    color: white;
     background: black;
+}
+
+@media (max-width: 637px) {
+    .nav-newline {
+        width: 100%;
+    }
+}
+
+@media (min-width: 576px) and (max-width: 637px) {
+    .nav-newline {
+        margin-bottom: 16px;
+
+    }
 }
