--- a/css/profile.css
+++ b/css/profile.css
@@ -1,17 +1,20 @@
-.emp-profile{
+.emp-profile {
     padding: 3%;
     margin-top: 3%;
     margin-bottom: 3%;
     border-radius: 0.5rem;
     background: #fff;
 }
-.profile-img{
+
+.profile-img {
     text-align: center;
 }
-.profile-img img{
+
+.profile-img img {
     width: 70%;
     height: 100%;
 }
+
 .profile-img .file {
     position: relative;
     overflow: hidden;
@@ -22,71 +25,112 @@
     font-size: 15px;
     background: #212529b8;
 }
+
 .profile-img .file input {
     position: absolute;
     opacity: 0;
     right: 0;
     top: 0;
 }
-.profile-head h5{
+
+.profile-head h5 {
     color: #333;
 }
-.profile-head h6{
-    color: #0062cc;
+
+.profile-head h6 {
+    color: #ff6c00;
+    margin-bottom: 20px;
 }
-.profile-edit-btn{
+
+.profile-edit-btn {
     border: none;
     border-radius: 1.5rem;
-    width: 70%;
+    width: auto;
     padding: 2%;
     font-weight: 600;
     color: #6c757d;
     cursor: pointer;
+    float: right;
 }
-.proile-rating{
+
+.profile-rating {
     font-size: 12px;
     color: #818182;
-    margin-top: 5%;
+    margin-top: 1%;
+    margin-bottom: 1%;
 }
-.proile-rating span{
+
+.profile-rating span {
     color: #495057;
     font-size: 15px;
     font-weight: 600;
 }
-.profile-head .nav-tabs{
-    margin-bottom:5%;
+
+.profile-head .nav-tabs {
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
-.profile-head .nav-tabs .nav-link{
-    font-weight:600;
+
+.profile-head .nav-tabs .nav-link {
+    font-weight: 600;
     border: none;
 }
-.profile-head .nav-tabs .nav-link.active{
+
+.profile-head .nav-tabs .nav-link.active {
     border: none;
-    border-bottom:2px solid #0062cc;
+    border-bottom: 2px solid #ff6c00;
 }
-.profile-work{
+
+.profile-work {
     padding: 14%;
     margin-top: -15%;
 }
-.profile-work p{
-    font-size: 12px;
+
+.profile-work .profile-title {
+    font-size: 14px;
     color: #818182;
     font-weight: 600;
     margin-top: 10%;
 }
-.profile-work a{
+
+.profile-work p {
     text-decoration: none;
     color: #495057;
     font-weight: 600;
     font-size: 14px;
+    margin-bottom: 1%;
 }
-.profile-work ul{
+
+.profile-work ul {
     list-style: none;
 }
-.profile-tab label{
+
+.profile-tab label {
     font-weight: 600;
 }
-.profile-tab p{
+
+.profile-tab p {
     font-weight: 600;
-    color: #0062cc;
+    color: #ff6c00;
 }
+
+.nav-link {
+    color: #ff6c00;
+}
+
+.nav-link:hover {
+    color: #ff3200;
+}
+
+@media (max-width: 767px) {
+
+    .profile-work{
+        display: none;
+    }
+}
+
+/*@media (min-width: 768px) {
+    .hidden-block{
+        display: none;
+    }
+}*/
