--- a/css/style.css
+++ b/css/style.css
@@ -227,7 +227,7 @@ button.popup {
 }
 
 .modal-menu.giallo > .btn:hover {
-    background: #ce8d00;
+    background: #c2a500;
 }
 
 .modal-menu.giallo {
