annuncio.css completato

--- a/css/annuncio.css
+++ b/css/annuncio.css
@@ -1,3 +1,18 @@
+.luogo{
+    float: right;
+    margin-right: 5%;
+}
+
+.destra{
+    float: right !important;
+    margin-right: 5px;
+    margin-bottom: auto;
+}
+
+.box-info{
+    padding: 50px
+}
+
 .info-post{
     text-align: center;
 }
