--- a/css/risultati.css
+++ b/css/risultati.css
@@ -350,11 +350,6 @@ body{
     text-align: left;
 }
 
-.subprod-cat{
-    display: block;
-    text-align: left;
-}
-
 .panel > .panel-body + .table, .panel > .panel-body + .table-responsive, .panel > .table + .panel-body, .panel > .table-responsive + .panel-body {
     border-top: 1px solid #ddd
 }
@@ -424,3 +419,7 @@ body{
     clear: both
 }
 
+.subprod-cat{
+    text-align: left;
+    list-style-type: none;
+}
