--- a/css/operazioni.css
+++ b/css/operazioni.css
@@ -1,22 +1,3 @@
-
-
-/*
-@media (min-width: 576px) {
-     { font-size: 1.25rem; }
-}
-@media (min-width: 768px) {
-     { font-size: 1.5rem; }
-}
-@media (min-width: 992px) {
-     { font-size: 1.75rem; }
-}
-@media (min-width: 1200px) {
-     { font-size: 2rem; }
-}*/
-
-
-
-
 @media (max-width: 527px) {
     .title-watched{
         font-size: 6.0vw;
@@ -42,4 +23,42 @@
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
     color: white;
     background-color: #ff6c00;
+}
+
+ul.rating {
+    display: flex;
+    list-style-type: none;
+}
+
+.profile-rating {
+    font-size: 12px;
+    color: #818182;
+    margin-top: 1%;
+    margin-bottom: 1%;
+}
+
+.profile-rating span {
+    color: #495057;
+    font-size: 15px;
+    font-weight: 600;
+}
+
+.orange-color {
+    color: #ff6c00 !important;
+}
+
+@media (max-width: 575px) {
+
+    .stelline {
+       display: inline-block;
+    }
+
+}
+
+@media (max-width: 767px) {
+
+    .nascondi-barra{
+        border-bottom: none !important;
+    }
+
 }
