--- a/css/operazioni.css
+++ b/css/operazioni.css
@@ -62,3 +62,9 @@ ul.rating {
     }
 
 }
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .text-newline{
+        display: grid;
+    }
+}
