--- a/css/annuncio.css
+++ b/css/annuncio.css
@@ -16,3 +16,81 @@
 .info-post{
     text-align: center;
 }
+
+.annulla{
+    display: none;
+}
+
+.annuncio-edit-btn {
+    border: none;
+    border-radius: 1.5rem;
+    width: auto;
+    padding: 2%;
+    font-weight: 600;
+    color: #6c757d;
+    cursor: pointer;
+    float: right;
+}
+
+.edit-annuncio {
+    width: 80%;
+    max-width: none;
+}
+
+@media (max-width: 575px) {
+    .edit-annuncio {
+        width: auto;
+    }
+}
+
+.modal-header.arancio {
+    background-color: #ff6c00;
+}
+
+.modal-header.arancio > h5 {
+    color: white;
+}
+
+.annuncio-img .file {
+    position: relative;
+    overflow: hidden;
+    margin-top: -20%;
+    width: 70%;
+    border: none;
+    border-radius: 0;
+    font-size: 15px;
+    background: #212529b8;
+}
+
+.annuncio-img .file input {
+    position: absolute;
+    opacity: 0;
+    right: 0;
+    top: 0;
+}
+
+.annuncio-img {
+    text-align: center;
+}
+
+.annuncio-img img {
+    width: 70%;
+}
+
+.form-width > div > div > label {
+    width: 90%;
+}
+
+.no-padding-top {
+    padding-top: 0 !important;
+}
+
+.link-profile{
+    color: black;
+    font-weight: bold;
+}
+
+.link-profile:hover{
+    color: #ff6c00;
+    text-decoration: none;
+}
