--- a/css/style.css
+++ b/css/style.css
@@ -468,10 +468,6 @@ button.blu:hover {
     width: 30px;
 }
 
-.garanzia{
-    display: none;
-}
-
-.tempoUsura{
+.display-none{
     display: none;
 }
