--- a/css/risultati.css
+++ b/css/risultati.css
@@ -57,7 +57,7 @@
 }
 
 .product-list img{
-    width: 100%;
+    max-width: 100%;
     border-radius: 4px 4px 0 0;
     -webkit-border-radius: 4px 4px 0 0;
 }
